Mon Jul  7 20:39:28 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(Init_win32ole): add
	  WIN32OLE_TYPE#source_ole_types, WIN32OLE_TYPE#default_ole_types,
	  WIN32OLE_TYPE#default_event_sources.

	* test/win32ole/test_win32ole_type.rb: ditto.

Mon Jul  7 19:45:22 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_dir.rb (test_chroot_nodir): add Errno::EPERM.

Mon Jul  7 17:12:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ipaddr.rb (IPAddr#initialize): get rid of ArgumentError in
	  IPAddr#to_range.  a patch from okkez <okkez000 AT gmail.com> in
	  [ruby-dev:35091].

Mon Jul  7 01:24:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for file name with spaces.
	  [ruby-talk:307404]

Mon Jul  7 00:59:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): prior STACK_END_ADDRESS if
	  found.  [ruby-core:17624]

Sun Jul  6 23:48:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (bsock_send, s_recvfrom, ruby_connect, s_accept),
	  (udp_send, unix_send_io, unix_recv_io): blocking region support.

Sun Jul  6 18:34:35 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_type.rb (test_initialize): add 
	  more assertions.

Sun Jul  6 10:12:21 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/test/unit/collector/objectspace.rb
	(Test::Unit::Collector::ObjectSpace::NAME): fix a typo.

Sun Jul  6 00:56:51 2008  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (host_str): fix type mismatch in rb_raise
	  format and argument.
	  (port_str): ditto.
	  (unix_recv_io): ditto.
	  (sock_s_unpack_sockaddr_un): ditto.

Sat Jul  5 23:42:23 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (NUM2INT): cast to int.
	  (FIX2INT): ditto.
	  (NUM2UINT): cast to unsigned int.
	  (FIX2UINT): ditto.

Sat Jul  5 23:10:41 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_pipe): new function for handling EMFILE and ENFILE