@@ -12,6 +12,7 @@
 
 #include "ruby/ruby.h"
 #include "ruby/signal.h"
+#include "ruby/encoding.h"
 #include "dln.h"
 #include <fcntl.h>
 #include <process.h>
@@ -1144,7 +1145,31 @@ skipspace(char *ptr)
     return ptr;
 }
 
-int 
+int
+rb_w32_parse_cmdline(char ***vec, const char *enc)
+{
+    WCHAR *wcmd;
+    char *cmd;
+    VALUE str;
+
+    if (enc) {
+	if (!rb_transcode_convertible("UTF-16LE", enc))
+	    return 0;
+	wcmd = GetCommandLineW();
+	str = rb_str_transcode(rb_enc_str_new((char *)wcmd,
+					      lstrlenW(wcmd) * sizeof(WCHAR),
+					      rb_enc_find("UTF-16LE")),
+			       rb_str_new2(enc));
+	cmd = RSTRING_PTR(str);
+    }
+    else {
+	cmd = GetCommandLineA();
+    }
+
+    return rb_w32_cmdvector(cmd, vec);
+}
+
+int
 rb_w32_cmdvector(const char *cmd, char ***vec)
 {
     int globbing, len;
@@ -3931,6 +3956,28 @@ rb_w32_write(int fd, const void *buf, size_t size)
     }
     else
 	return rb_w32_send(fd, buf, size, 0);
+}
+
+long
+rb_w32_write_console(VALUE str, int fd)
+{
+    static int disable;
+    HANDLE handle;
+    DWORD dwMode, reslen;
+
+    if (disable) return -1L;
+    handle = (HANDLE)_osfhnd(fd);
+    if (!GetConsoleMode(handle, &dwMode) ||
+	!rb_transcode_convertible(rb_enc_name(rb_enc_get(str)), "UTF-16LE"))
+	return -1L;
+
+    str = rb_str_transcode(str, rb_str_new2("UTF-16LE"));
+    if (!WriteConsoleW(handle, (LPWSTR)RSTRING_PTR(str), RSTRING_LEN(str)/2, &reslen, NULL)) {
+	if (GetLastError() == ERROR_CALL_NOT_IMPLEMENTED)
+	    disable = TRUE;
+	return -1L;
+    }
+    return (long)reslen;
 }
 
 static int
