@@ -1,3 +1,14 @@
+Tue Jul  8 00:03:20 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c, include/win32/win32.c (rb_w32_parse_cmndline): new
+	  function to parse command line from GetCommandLineW().
+	  this is incomplete.
+
+	* ruby.c (process_options): use rb_w32_parse_cmdline(). this is
+	  incomplete, too.
+
+	* win32/win32.c (rb_w32_write_console): sorry, pullup mistake.
+
 Mon Jul  7 20:39:28 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c(Init_win32ole): add
